fix(table): problem with table alignement

--- a/src/routes/planningBoard.module.scss
+++ b/src/routes/planningBoard.module.scss
@@ -12,6 +12,11 @@ body{
     margin: 15px;
 }
 
+.projectCard {
+    flex:1;
+    height: 300px!important;
+}
+
 .columnTitles {
     min-width: 200px;
     h2 {
